feat: endpoint for retrieving specific cinema movies
